# rllib-trading-arena

./: .flake8  .gitignore  DEMO_GUIDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
agents/: __init__.py  arbitrageur.py  base_agent.py  market_maker.py  momentum_trader.py
checkpoints/: training_results_ppo.yaml
checkpoints/single_agent_market_maker/: algorithm_state.pkl  class_and_ctor_args.pkl  evaluation_results.json  training_metrics.json
checkpoints/single_agent_market_maker/env_runner/: class_and_ctor_args.pkl
checkpoints/single_agent_market_maker/env_runner/env_to_module_connector/: class_and_ctor_args.pkl
checkpoints/single_agent_market_maker/env_runner/module_to_env_connector/: class_and_ctor_args.pkl
checkpoints/single_agent_market_maker/learner_group/: class_and_ctor_args.pkl
checkpoints/single_agent_market_maker/learner_group/learner/: class_and_ctor_args.pkl  state.pkl
checkpoints/single_agent_market_maker/learner_group/learner/rl_module/: class_and_ctor_args.pkl
checkpoints/single_agent_market_maker/learner_group/learner/rl_module/default_policy/: class_and_ctor_args.pkl  module_state.pkl
configs/: trading_config.yaml
dashboard/: __init__.py  cli.py  trading_dashboard.py  trading_dashboard_broken.py
environments/: __init__.py  market_simulator.py  order_book.py  trading_environment.py
training/: __init__.py  cli.py  multi_agent_demo.py  multi_agent_trainer.py  simple_multi_agent_demo.py  single_agent_demo.py  single_agent_evaluation.py
